--- a/weather-app/src/App.css
+++ b/weather-app/src/App.css
@@ -3,6 +3,17 @@ body {
   padding: 0;
 }
 
+.App {
+  text-align: center;
+  margin: 50px auto 0px;
+  width: 90%;
+  max-width: 700px;
+  border-radius: 20px;
+  height: 470px;
+  padding: 20px 15px;
+  background-color: orange;
+}
+
 .search-engine {
   width: 100%;
   display: flex;
